tests/snapshots/test_runner__tests__compiler__typecheck__promise_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: Integer = !123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/promise_2.kk:1:20
  │
1 │ let foo: Integer = !123
  │                    ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + !Integer  |
    +---------------+-------------+
